добавлены зоны Паучий лес и Восточная дорога

--- a/areas/areas/tookland/rooms.yml
+++ b/areas/areas/tookland/rooms.yml
@@ -1323,7 +1323,7 @@
 - id: 34783
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге раскинулись некошеные луга
@@ -1332,12 +1332,14 @@
   exits:
     - roomId: "tookland:34784"
       direction: запад
+    - roomId: "eastroad:10900"
+      direction: восток
     - roomId: "tookland:34750"
       direction: юг
 - id: 34784
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге раскинулись некошеные луга 
@@ -1353,7 +1355,7 @@
 - id: 34785
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге раскинулись некошеные луга
@@ -1369,7 +1371,7 @@
 - id: 34786
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге раскинулись некошеные луга
@@ -1385,7 +1387,7 @@
 - id: 34787
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге раскинулись некошеные луга
@@ -1401,7 +1403,7 @@
 - id: 34788
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге раскинулись некошеные луга
@@ -1417,7 +1419,7 @@
 - id: 34789
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге раскинулись некошеные луга
@@ -1433,7 +1435,7 @@
 - id: 34790
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге раскинулись некошеные луга
@@ -1447,7 +1449,7 @@
 - id: 34791
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге раскинулись некошеные луга
@@ -1465,7 +1467,7 @@
 - id: 34792
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге раскинулись некошеные луга
@@ -1481,7 +1483,7 @@
 - id: 34793
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге раскинулись некошеные луга
@@ -1497,7 +1499,7 @@
 - id: 34794
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге раскинулись некошеные луга
@@ -1513,7 +1515,7 @@
 - id: 34795
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге раскинулись некошеные луга
@@ -1529,7 +1531,7 @@
 - id: 34796
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге раскинулись некошеные луга
@@ -1545,7 +1547,7 @@
 - id: 34797
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге раскинулись некошеные луга
@@ -1561,7 +1563,7 @@
 - id: 34798
   title: "Западный тракт"
   description: >-
-    Вы идете по широкой дороге, соединяющей эти места и Пригорье. Местные жители давно
+    Вы идете по широкой дороге, соединяющей эти места и Пустоши. Местные жители давно
     окрестили ее Западным Трактом, и это название устоялось. Был еще Южный Тракт, но со
     временем его забросили и теперь почти не используют. Тракт очень широк, несколько
     телег могут пройти по нему одновременно. На юге лежит крупный город, над
