добавлено заклинание благословение

--- a/areas/areas/court/rooms.yml
+++ b/areas/areas/court/rooms.yml
@@ -6,6 +6,7 @@
     праздными зеваками, пришедшими сюда в поиске зрелищ и развлечений. А в 
     противоположном конце площади возвышается здание суда.
   light: 70
+  npcs: ["court:40200"]
   exits:
     - roomId: "court:40201"
       direction: юг
@@ -17,6 +18,7 @@
     поучаствовать в этом процессе. Площадь ограждена от остального города толстой
     кирпичной стеной.
   light: 70
+  npcs: ["court:40206"]
   exits:
     - roomId: "court:40200"
       direction: север
@@ -34,6 +36,7 @@
     виднеется эшафот с окровавленной плахой, а чуть дальше на западе несколько виселиц 
     с трупами, у которых вороны уже успели выклевать глаза.
   light: 70
+  npcs: ["court:40205"]
   exits:
     - roomId: "court:40201"
       direction: запад
@@ -50,6 +53,11 @@
     что рано или поздно закончит свой путь тут, но от этого количество нарушителей
     закона почему-то не становится меньше.
   light: 70
+  npcs: ["court:40201", "court:40204"]
+  items:
+    - id: "court:40259"
+      respawnChance: 100
+      replaceOnRespawn: true
   exits:
     - roomId: "court:40202"
       direction: север
@@ -67,6 +75,7 @@
     эшафот с окровавленной плахой, а на западе ряд закованных в колодки воров и
     жуликов. С других сторон это место огорожено толстой кирпичной стеной.
   light: 70
+  npcs: ["court:40202"]
   exits:
     - roomId: "court:40203"
       direction: север
@@ -79,6 +88,11 @@
     жителей несколько неопасных преступников. Тут же стоит и корзина с гнилыми 
     фруктами, чтобы каждый желающий смог запустить ими в лицо преступника.
   light: 70
+  npcs: ["court:40223", "court:40206"]
+  items:
+    - id: "court:40257"
+      respawnChance: 100
+      replaceOnRespawn: true
   exits:
     - roomId: "court:40209"
       direction: север
@@ -94,6 +108,7 @@
     с востока доносятся азартные крики горожан, расстреливающих гнилыми овощами и
     фруктами закованных в кандалы преступников.
   light: 70
+  npcs: ["court:40205"]
   exits:
     - roomId: "court:40207"
       direction: север
@@ -107,6 +122,17 @@
     воровства. Если пойти отсюда на юг, то можно выйти к центру площади, откуда 
     открывается вид на все местные достопримечательности.
   light: 70
+  npcs: ["court:40234"]
+  items:
+    - id: "court:40264"
+      respawnChance: 100
+      replaceOnRespawn: true
+    - id: "court:40264"
+      respawnChance: 100
+      replaceOnRespawn: true
+    - id: "court:40265"
+      respawnChance: 100
+      replaceOnRespawn: true
   exits:
     - roomId: "court:40208"
       direction: север
@@ -122,6 +148,7 @@
     восточнее эшафот с плахой и неподалеку от него ряд закованных в кандалы местных
     преступников, обреченно ожидающих своей участи.
   light: 70
+  npcs: ["court:40202"]
   exits:
     - roomId: "court:40201"
       direction: восток
@@ -136,6 +163,7 @@
     для того чтобы посмотреть на казнь через обезглавливание, сюда приезжает народ
     со всех окрестных деревень.
   light: 70
+  npcs: ["court:40203"]
   exits:
     - roomId: "court:40201"
       direction: север
@@ -153,6 +181,7 @@
     темные зарешеченные окна, и горгульи, установленные на уровне второго этажа; создают 
     гнетущее настроение безысходности.
   light: 70
+  npcs: ["court:40207", "court:40207"]
   exits:
     - roomId: "court:40259"
       direction: север
@@ -173,6 +202,11 @@
     делать дальше. Отсюда, на север и юг, отходят коридоры, ведущие, соответственно
     в северное и южное крыло здания, а на западе дверь на городскую площадь.
   light: 70
+  npcs: ["court:40208"]
+  items:
+    - id: "court:40263"
+      respawnChance: 100
+      replaceOnRespawn: true
   exits:
     - roomId: "court:40212"
       direction: север
@@ -223,6 +257,7 @@
     отходит широкая дверь, за которой расположен зал в котором выслушивается основное
     количество дел, о чем можно догадаться по шуму и разговорам, доносящимся от туда.
   light: 70
+  npcs: ["court:40226"]
   exits:
     - roomId: "court:40224"
       direction: север
@@ -342,6 +377,7 @@
     с планами этой части здания и нарисованы стрелки, указывающие на север, куда
     следует эвакуироваться в случае пожара.
   light: 70
+  npcs: ["court:40226"]
   exits:
     - roomId: "court:40222"
       direction: север
@@ -375,6 +411,7 @@
     просто доносы недоброжелателей. На стенах кабинета висят карты города с 
     различными пометками и надписями.
   light: 70
+  npcs: ["court:40209"]
   exits:
     - roomId: "court:40213"
       direction: восток
@@ -409,6 +446,7 @@
     судятся, обычно, в одиночку. На западе от трибуны установлена клетка для
     обвиняемых, а на востоке находится ложа для присяжных.
   light: 70
+  npcs: ["court:40210"]
   exits:
     - roomId: "court:40226"
       direction: запад
@@ -424,6 +462,7 @@
     несколько стражников, на случай, если преступникам придет помощь извне в виде
     их друзей или родственников.
   light: 70
+  npcs: ["court:40212", "court:40213"]
   exits:
     - roomId: "court:40225"
       direction: восток
@@ -435,6 +474,7 @@
     заполнена лишь на половину, больше присяжных собирают лишь для очень серьезных
     дел, связанных с многочисленными убийствами или колдовством.
   light: 70
+  npcs: ["court:40211", "court:40211", "court:40211"]
   exits:
     - roomId: "court:40225"
       direction: запад
@@ -446,6 +486,11 @@
     и изнасилованиях. Все они аккуратно рассортированы по нескольким стеллажам и
     висящим на стенах деревянных полкам.
   light: 70
+  npcs: ["court:40228"]
+  items:
+    - id: "court:40244"
+      respawnChance: 100
+      replaceOnRespawn: true
   exits:
     - roomId: "court:40215"
       direction: запад
@@ -461,7 +506,11 @@
     инвентарь: швабры, ведра, тряпки и тому подобное. Свет проникает сюда лишь через
     круглую зарешеченную форточку под самым потолком, едва заметную из-за широких
     пыльных полок.
-  light: 70
+  light: 30
+  npcs: ["court:40218"]
+  script: 'push2'
+  metadata:
+    commands: ['нажать']
   exits:
     - roomId: "court:40219"
       direction: запад
@@ -478,6 +527,7 @@
     кроватей с тонкими соломенными матрасами. Кроме того, здесь есть еще грязный,
     заваленный объедками стол у дальней стены.
   light: 70
+  npcs: ["court:40214", "court:40214"]
   exits:
     - roomId: "court:40221"
       direction: восток
@@ -493,6 +543,7 @@
     присяжные, судьи и охранники между слушаниями дел. Они могут получить свою
     порцию на раздаче у кухни на западе и расположиться за любым из столов в зале.
   light: 70
+  npcs: ["court:40215", "court:40216"]
   exits:
     - roomId: "court:40219"
       direction: север
@@ -511,6 +562,7 @@
     здесь стоит настолько отвратительный, что кажется, здесь готовят не еду и питье
     для посетителей столовой, а какие-то колдовские зелья.
   light: 70
+  npcs: ["court:40217"]
   exits:
     - roomId: "court:40231"
       direction: восток
@@ -522,6 +574,7 @@
     перилам, служащие суда люди не робкого десятка, и пользуются этой лестницей
     довольно часто.
   light: 70
+  npcs: ["court:40226"]
   exits:
     - roomId: "court:40217"
       direction: запад
@@ -640,6 +693,7 @@
     из которых уже успели высохнуть от старость, а другая часть еще совсем свежие.
     Коридор же ведет с востока на запад, где постепенно теряется во тьме.
   light: 50
+  npcs: ["court:40226"]
   exits:
     - roomId: "court:40245"
       direction: север
@@ -660,6 +714,9 @@
     В самом центре стены установлен железный рычаг, подсоединенный, очевидно, к
     какому-то механизму.
   light: 50
+  script: 'push1'
+  metadata:
+    commands: ['нажать']
   exits:
     - roomId: "court:40240"
       direction: восток
@@ -690,6 +747,10 @@
     Возможно в дальнейшем завал разберут и коридор восстановят, но пока единственный
     выход отсюда ведет на восток.
   light: 50
+  npcs: ["court:40226"]
+  script: 'downexit'
+  metadata:
+    commands: ['разгести']
   exits:
     - roomId: "court:40242"
       direction: восток
@@ -701,6 +762,7 @@
     стены установлен каменный камин, в котором всегда полыхает огонь, но даже
     несмотря на это, в комнате очень холодно.
   light: 50
+  npcs: ["court:40225"]
   exits:
     - roomId: "court:40242"
       direction: север
@@ -717,6 +779,7 @@
     Все они покрыты свежими пятнами крови, свидетельствующими о том, что их
     использовали еще совсем недавно.
   light: 50
+  npcs: ["court:40224"]
   exits:
     - roomId: "court:40240"
       direction: юг
@@ -733,6 +796,7 @@
     сидящие здесь заключенные. На стенах камеры видны несколько ржавых колец, к
     которым крепятся кандалы буйных преступников.
   light: 50
+  npcs: ["court:40220"]
   exits:
     - roomId: "court:40236"
       direction: запад
@@ -749,6 +813,7 @@
     стульев. Видимо это камера для знатных господ и богачей, и сюда вряд ли посадят
     уличного бродягу или деревенщину - фермера.
   light: 50
+  npcs: ["court:40221"]
   exits:
     - roomId: "court:40238"
       direction: запад
@@ -780,6 +845,7 @@
     под ней кто-то сдох. Под самым потолком заметно пятно света, там находится
     крохотное зарешеченное окошко, через которое проглядывает кусочек неба.
   light: 50
+  npcs: ["court:40222"]
   exits:
     - roomId: "court:40238"
       direction: восток
@@ -835,6 +901,7 @@
     За этой дверью находится комната верховного судьи, славящегося своим скверным
     вздорным характером.
   light: 80
+  npcs: ["court:40227", "court:40227"]
   exits:
     - roomId: "court:40254"
       direction: север
@@ -854,6 +921,10 @@
     высокомерный и заносчивый. Из общей обстановки выделяется, разве что книжный
     шкаф, неприметно установленный у дальней стены.
   light: 80
+  npcs: ["court:40228", "court:40229"]
+  script: 'shelf'
+  metadata:
+    commands: ['нажать']
   exits:
     - roomId: "court:40253"
       direction: юг
@@ -869,6 +940,10 @@
     утварью и дорогими украшениями. По всей видимости, здесь главный судья этого 
     города хранит все свое добро, добытое не совсем законными методами.
   light: 80
+  items:
+    - id: "court:40257"
+      respawnChance: 80
+      replaceOnRespawn: true
   exits:
     - roomId: "court:40254"
       direction: юг
@@ -879,6 +954,11 @@
     толстым слоем скользкой плесени. Колодец наполовину заполнен застоявшейся,
     затхлой водой, в которой у самого дна плавают мерзкие непонятные твари.
   light: 20
+  npcs: ["court:40219", "court:40233"]
+  items:
+    - id: "court:40260"
+      respawnChance: 100
+      replaceOnRespawn: true
   exits:
     - roomId: "court:40243"
       direction: вверх
@@ -923,6 +1003,8 @@
     диван для отдыха, а также висят несколько довольно примечательных картин.
     Обстановка очень мирная и приятная.
   light: 80
+  metadata:
+    nomob: true
   exits:
     - roomId: "court:40251"
       direction: восток
