--- a/areas/areas/court/rooms.yml
+++ b/areas/areas/court/rooms.yml
@@ -1,19 +1,21 @@
 - id: 40200
   title: "Перед центральной площадью"
   description: >-
-    Вы находитесь перед входом на центральную площадь Мон-Харнена, служащую 
+    Вы находитесь перед входом на центральную площадь Гурбы, служащую
     местом публичного наказания преступников этого города. Площадь всегда полна
-    праздными зеваками, пришедшими сюда в поиске зрелищ и развлечений. А в 
+    праздными зеваками, пришедшими сюда в поиске зрелищ и развлечений. А в
     противоположном конце площади возвышается здание суда.
   light: 70
   npcs: ["court:40200"]
   exits:
+    - roomId: "gurba:market2"
+      direction: север
     - roomId: "court:40201"
       direction: юг
 - id: 40201
   title: "В начале площади правосудия"
   description: >-
-    Вы остановились у таблички в начале площади Мон-Харнена, сообщающей о том,
+    Вы остановились у таблички в начале площади Гурбы, сообщающей о том,
     что здесь место наказаний преступников этого города, и каждый желающий может
     поучаствовать в этом процессе. Площадь ограждена от остального города толстой
     кирпичной стеной.
@@ -31,9 +33,9 @@
 - id: 40202
   title: "Северо-восточный угол площади"
   description: >-
-    Вы находитесь в северо-восточном углу городской площади Мон-Харнена, 
-    служащую местом наказаний местных преступников. К югу отсюда из-за спин зевак 
-    виднеется эшафот с окровавленной плахой, а чуть дальше на западе несколько виселиц 
+    Вы находитесь в северо-восточном углу городской площади Гурбы,
+    служащую местом наказаний местных преступников. К югу отсюда из-за спин зевак
+    виднеется эшафот с окровавленной плахой, а чуть дальше на западе несколько виселиц
     с трупами, у которых вороны уже успели выклевать глаза.
   light: 70
   npcs: ["court:40205"]
@@ -49,7 +51,7 @@
   description: >-
     Здесь, на небольшом возвышении, установлена плаха, на которой лишились голов
     множество убийц и разбойников, о чем говорят бурые пятна засохшей крови на плахе
-    и вокруг нее. Каждый, вставший на темный путь преступлений Мон-Харнена знает,
+    и вокруг нее. Каждый, вставший на темный путь преступлений в Гурбе знает,
     что рано или поздно закончит свой путь тут, но от этого количество нарушителей
     закона почему-то не становится меньше.
   light: 70
@@ -70,7 +72,7 @@
 - id: 40204
   title: "Юго-восточный угол площади"
   description: >-
-    Вы находитесь в юго-восточном углу городской площади Мон-Харнена, служащую
+    Вы находитесь в юго-восточном углу городской площади Гурбы, служащую
     местом наказаний местных преступников. К северу отсюда из-за спин зевак виднеется
     эшафот с окровавленной плахой, а на западе ряд закованных в колодки воров и
     жуликов. С других сторон это место огорожено толстой кирпичной стеной.
@@ -85,7 +87,7 @@
   title: "Место всеобщего наказания"
   description: >-
     Тут, у кособокой кирпичной стены, закованы в кандалы для потехи местных
-    жителей несколько неопасных преступников. Тут же стоит и корзина с гнилыми 
+    жителей несколько неопасных преступников. Тут же стоит и корзина с гнилыми
     фруктами, чтобы каждый желающий смог запустить ими в лицо преступника.
   light: 70
   npcs: ["court:40223", "court:40206"]
@@ -103,7 +105,7 @@
 - id: 40206
   title: "Юго-западный угол площади"
   description: >-
-    Тут, в юго-западном углу городской площади Мон-Харнена, в удалении от 
+    Тут, в юго-западном углу городской площади Гурбы, в удалении от
     основных местных достопримечательностей, относительная тишина и спокойствие. Лишь
     с востока доносятся азартные крики горожан, расстреливающих гнилыми овощами и
     фруктами закованных в кандалы преступников.
@@ -119,7 +121,7 @@
   description: >-
     Здесь, у северного конца площади, ограниченной серой кирпичной стеной, в ряд
     установлены три виселицы, пустующих очень редко из-за процветающего в этих местах
-    воровства. Если пойти отсюда на юг, то можно выйти к центру площади, откуда 
+    воровства. Если пойти отсюда на юг, то можно выйти к центру площади, откуда
     открывается вид на все местные достопримечательности.
   light: 70
   npcs: ["court:40234"]
@@ -143,7 +145,7 @@
 - id: 40208
   title: "Северо-западный угол площади"
   description: >-
-    Здесь, площадь Мон-Харнена немного возвышается над остальной частью, из-за 
+    Здесь, площадь Гурбы немного возвышается над остальной частью, из-за
     чего отсюда открывается обзор на нее всю. На юге находятся виселицы, юго-
     восточнее эшафот с плахой и неподалеку от него ряд закованных в кандалы местных
     преступников, обреченно ожидающих своей участи.
@@ -157,7 +159,7 @@
 - id: 40209
   title: "В центре площади"
   description: >-
-    Вы находитесь в центре площади Мон-Харнена, служащей местом наказаний воров,
+    Вы находитесь в центре площади Гурбы, служащей местом наказаний воров,
     убийц, конокрадов и прочих отбросов этого города. На площади всегда людно, так
     как наблюдать за страданиями других - любимое развлечение местных жителей. А,
     для того чтобы посмотреть на казнь через обезглавливание, сюда приезжает народ
@@ -178,7 +180,7 @@
   description: >-
     Вы остановились у массивного двухэтажного здания на востоке, построенного из
     крупных серых булыжников, служащего судом этого города. Все в его облике: и 
-    темные зарешеченные окна, и горгульи, установленные на уровне второго этажа; создают 
+    темные зарешеченные окна, и горгульи, установленные на уровне второго этажа; создают
     гнетущее настроение безысходности.
   light: 70
   npcs: ["court:40207", "court:40207"]
@@ -197,12 +199,15 @@
 - id: 40211
   title: "Приемная"
   description: >-
-    Здесь, в небольшом прямоугольном зале, собираются приведенные на суд 
+    Здесь, в небольшом прямоугольном зале, собираются приведенные на суд
     преступники и их родственники, ожидающие пока их зарегистрируют и скажут, что
     делать дальше. Отсюда, на север и юг, отходят коридоры, ведущие, соответственно
     в северное и южное крыло здания, а на западе дверь на городскую площадь.
   light: 70
   npcs: ["court:40208"]
+  script: 'find'
+  metadata:
+    commands: ['искать']
   items:
     - id: "court:40263"
       respawnChance: 100
@@ -222,7 +227,7 @@
 - id: 40212
   title: "Северное крыло"
   description: >-
-    Вы находитесь в узком коридоре, ведущем в северную часть здания суда, где 
+    Вы находитесь в узком коридоре, ведущем в северную часть здания суда, где
     расположен основной зал для выслушивания дел. На юге расположена приемная суда,
     куда поступают все вновь прибывшие преступники и приходят посетители.
   light: 70
@@ -234,8 +239,8 @@
 - id: 40213
   title: "Северное крыло"
   description: >-
-    Здесь коридор, освещенный тусклыми масляными лампами, поворачивает с юга на 
-    восток, а на западе находится кабинет капитана стражи, известного своей 
+    Здесь коридор, освещенный тусклыми масляными лампами, поворачивает с юга на
+    восток, а на западе находится кабинет капитана стражи, известного своей
     непримиримостью к преступности в городе.
   light: 70
   exits:
@@ -321,7 +326,7 @@
   title: "Южное крыло"
   description: >-
     Вы находитесь в широком прямом коридоре, ведущем с юга на север по зданию
-    суда. Он очень тускло освещен несколькими масляными лампами и из-за этого 
+    суда. Он очень тускло освещен несколькими масляными лампами и из-за этого
     кажется длиннее, чем он есть на самом деле, хотя снаружи здание суда выглядит
     не таким уж большим.
   light: 70
@@ -333,9 +338,9 @@
 - id: 40219
   title: "Южное крыло"
   description: >-
-    В этом месте коридор поворачивает с запада на север, с юга доносятся 
+    В этом месте коридор поворачивает с запада на север, с юга доносятся
     неприятные запахи жаренного лука и тушенной капусты, по всей видимости там, за
-    толстой деревянной дверью, находится местная столовая, куда наведываются 
+    толстой деревянной дверью, находится местная столовая, куда наведываются
     подкрепиться судьи и присяжные между слушаниями дел.
   light: 70
   exits:
@@ -361,7 +366,7 @@
   description: >-
     Тут коридор едва освещен полупогасшими от нехватки масла лампами, однако даже
     в таком полумраке можно разглядеть, что коридор ведет прямо - с запада на восток,
-    никуда не сворачивая. Путь на север и юг преграждают влажные кирпичные стены с 
+    никуда не сворачивая. Путь на север и юг преграждают влажные кирпичные стены с
     осыпающимся от старости цементом из щелей между камнями.
   light: 70
   exits:
@@ -397,6 +402,7 @@
     основном служебные помещения. Поэтому, праздным прохожим тут вряд ли будут рады,
     а кое-какой особо ретивый охранник и вовсе захочет выпроводить вас отсюда силой.
   light: 70
+  npcs: ["court:40232"]
   exits:
     - roomId: "court:40211"
       direction: север
@@ -423,9 +429,9 @@
 - id: 40224
   title: "Зал слушаний"
   description: >-
-    Вы зашли в просторный зал заставленный узкими деревянными скамьями, 
-    установленными для многочисленных слушателей судебных процессов, которые 
-    являются одним из любимых развлечений горожан. На севере возвышается трибуна 
+    Вы зашли в просторный зал заставленный узкими деревянными скамьями,
+    установленными для многочисленных слушателей судебных процессов, которые
+    являются одним из любимых развлечений горожан. На севере возвышается трибуна
     за которой заседает судья, а на юге находится выход из зала.
   light: 70
   exits:
@@ -457,7 +463,7 @@
 - id: 40226
   title: "У ограждения для обвиняемых"
   description: >-
-    Этот угол зала для слушаний огражден толстой железной решеткой для того, 
+    Этот угол зала для слушаний огражден толстой железной решеткой для того,
     чтобы удержать обвиняемых от попыток бегства. Вдобавок, тут постоянно дежурят
     несколько стражников, на случай, если преступникам придет помощь извне в виде
     их друзей или родственников.
@@ -470,7 +476,7 @@
   title: "Ложа для присяжных"
   description: >-
     Тут, под грязным зарешеченным окном, находится ложа для присяжных с
-    несколькими скамьями, установленными одна под другой. Она обычно бывает 
+    несколькими скамьями, установленными одна под другой. Она обычно бывает
     заполнена лишь на половину, больше присяжных собирают лишь для очень серьезных
     дел, связанных с многочисленными убийствами или колдовством.
   light: 70
@@ -482,7 +488,7 @@
   title: "Судебный архив"
   description: >-
     В этом месте собраны документы о всех делах заслушанных в стенах этого суда.
-    В тысячах пыльных свитках собраны сотни кровавых историй о убийствах, грабежах 
+    В тысячах пыльных свитках собраны сотни кровавых историй о убийствах, грабежах
     и изнасилованиях. Все они аккуратно рассортированы по нескольким стеллажам и
     висящим на стенах деревянных полкам.
   light: 70
@@ -511,6 +517,10 @@
   script: 'push2'
   metadata:
     commands: ['нажать']
+  items:
+    - id: "court:40238"
+      respawnChance: 100
+      replaceOnRespawn: true
   exits:
     - roomId: "court:40219"
       direction: запад
@@ -557,7 +567,7 @@
 - id: 40232
   title: "Кухня"
   description: >-
-    В самом центре этой комнаты установлена раскаленная до красна металлическая 
+    В самом центре этой комнаты установлена раскаленная до красна металлическая
     плита, на которой весело булькают несколько кастрюль и шипят сковородки. А запах
     здесь стоит настолько отвратительный, что кажется, здесь готовят не еду и питье
     для посетителей столовой, а какие-то колдовские зелья.
@@ -598,7 +608,7 @@
 - id: 40235
   title: "Поворот коридора"
   description: >-
-    Здесь коридор, ведущий по подвальному тюремному этажу суда, поворачивает с 
+    Здесь коридор, ведущий по подвальному тюремному этажу суда, поворачивает с
     юга на запад, откуда доносятся громкие, полные муки крики, что вряд ли является
     для вас хорошим предзнаменованием.
   light: 50
@@ -610,7 +620,7 @@
 - id: 40236
   title: "Между тюремных камер"
   description: >-
-    Здесь коридор, ведущий по подвальному тюремному этажу суда, поворачивает с 
+    Здесь коридор, ведущий по подвальному тюремному этажу суда, поворачивает с
     юга на запад, откуда доносятся громкие, полные муки крики, что вряд ли является
     для вас хорошим предзнаменованием.
   light: 50
@@ -637,7 +647,7 @@
   description: >-
     Вы находитесь в начале темного коридора, тянущегося с севера на юг мимо 
     мрачных казематов, в которых томятся узники в ожидании суда. Время от времени,
-    раздаются их громкие крики, это инквизиторы добиваются признаний обвиняемых. 
+    раздаются их громкие крики, это инквизиторы добиваются признаний обвиняемых.
     Они вряд ли будут рады свидетелям, так что лучше не попадаться им на глаза.
   light: 50
   exits:
@@ -652,7 +662,7 @@
   description: >-
     Вы находитесь в тянущемся с севера на юг между тюремных камер коридоре,
     тускло освещенном несколькими лампами. Каменные стены коридора отражают и
-    усиливают любой звук, так что кажется, что ваши шаги слышно во всем здании 
+    усиливают любой звук, так что кажется, что ваши шаги слышно во всем здании
     суда, а если это действительно так, то скоро сюда сбегутся все охранники.
   light: 50
   exits:
@@ -676,7 +686,7 @@
 - id: 40239
   title: "Поворот коридора"
   description: >-
-    Здесь коридор, ведущий по подвальному тюремному этажу суда, поворачивает с 
+    Здесь коридор, ведущий по подвальному тюремному этажу суда, поворачивает с
     севера на запад, откуда доносятся громкие крики и звуки ударяющейся по плоти
     плети, там вряд ли вас встретят с распростертыми объятиями.
   light: 50
@@ -717,6 +727,10 @@
   script: 'push1'
   metadata:
     commands: ['нажать']
+  items:
+    - id: "court:40235"
+      respawnChance: 100
+      replaceOnRespawn: true
   exits:
     - roomId: "court:40240"
       direction: восток
@@ -724,7 +738,7 @@
   title: "Перед комнатой инквизитора"
   description: >-
     Вы находитесь перед толстой, обитой железом дверью на юге откуда доносятся
-    громкие, полные боли крики. Коридор же ведет с востока на запад, где постепенно 
+    громкие, полные боли крики. Коридор же ведет с востока на запад, где постепенно
     теряется в непроглядной тьме.
   light: 50
   exits:
@@ -745,12 +759,12 @@
     В этой части коридора путь на запад преграждает завал из массивных обломков 
     потолка, а судя по свежим сколам на камнях, произошло это событие недавно.
     Возможно в дальнейшем завал разберут и коридор восстановят, но пока единственный
-    выход отсюда ведет на восток.
+    выход отсюда ведет на восток. Возможно, завал сможете разгрести и вы.
   light: 50
   npcs: ["court:40226"]
   script: 'downexit'
   metadata:
-    commands: ['разгести']
+    commands: ['разгрести']
   exits:
     - roomId: "court:40242"
       direction: восток
@@ -774,7 +788,7 @@
 - id: 40245
   title: "Пыточная"
   description: >-
-    Вы зашли в комнату, заставленную всякими ужасными приспособлениями, 
+    Вы зашли в комнату, заставленную всякими ужасными приспособлениями,
     единственное предназначение которых, приносить невыносимые страдания человеку.
     Все они покрыты свежими пятнами крови, свидетельствующими о том, что их
     использовали еще совсем недавно.
@@ -858,7 +872,7 @@
   title: "Винтовая лестница"
   description: >-
     Отсюда спускается на первый этаж и дальше в подвал ржавая винтовая лестница,
-    издающая пронзительные скрипы, при любой попытке ступить на нее. На западе 
+    издающая пронзительные скрипы, при любой попытке ступить на нее. На западе
     начинается широкий коридор, проходящий по второму этажу здания суда.
   light: 50
   exits:
@@ -870,9 +884,10 @@
   title: "Широкий коридор"
   description: >-
     Отсюда спускается на первый этаж и дальше в подвал ржавая винтовая лестница,
-    издающая пронзительные скрипы, при любой попытке ступить на нее. На западе 
+    издающая пронзительные скрипы, при любой попытке ступить на нее. На западе
     начинается широкий коридор, проходящий по второму этажу здания суда.
   light: 80
+  npcs: ["court:40232"]
   exits:
     - roomId: "court:40252"
       direction: север
@@ -937,7 +952,7 @@
   title: "Сокровищница верховного судьи"
   description: >-
     Вы зашли в просторную комнату сплошь заставленную роскошной мебелью, богатой
-    утварью и дорогими украшениями. По всей видимости, здесь главный судья этого 
+    утварью и дорогими украшениями. По всей видимости, здесь главный судья этого
     города хранит все свое добро, добытое не совсем законными методами.
   light: 80
   items:
@@ -966,8 +981,8 @@
   title: "Стоя на виселице"
   description: >-
     Под удивленные взгляды прохожих, вы стоите на виселице, опираясь руками на стену.
-    Виселица легко держит ваш вес, хотя и слегка поскрипывает. Стена здесь неровная, 
-    а верх стены находится на уровне вытянутых рук. При желании, наверное, можно туда 
+    Виселица легко держит ваш вес, хотя и слегка поскрипывает. Стена здесь неровная,
+    а верх стены находится на уровне вытянутых рук. При желании, наверное, можно туда
     залезть.
   light: 80
   exits:
@@ -987,8 +1002,8 @@
   title: "Около здания суда"
   description: >-
     Вы остановились у массивного двухэтажного здания на востоке, построенного из
-    крупных серых булыжников, служащего судом этого города. Все в его облике: и 
-    темные зарешеченные окна, и горгульи, установленные на уровне второго этажа; создают 
+    крупных серых булыжников, служащего судом этого города. Все в его облике: и
+    темные зарешеченные окна, и горгульи, установленные на уровне второго этажа; создают
     гнетущее настроение безысходности.
   light: 80
   exits:
